# C-Food

./: .cproject  .gitignore  .project  CMakeLists.txt  makefile  readme.md  readme.txt  test.txt
Automat/: makefile
Automat/debug/: AutomatTest
Automat/includes/: Automat.h
Automat/src/: Automat.cpp  TestAutomat.cpp
Buffer/: makefile  readme.md
Buffer/debug/: BufferTest
Buffer/includes/: Buffer.h
Buffer/src/: Buffer.cpp  TestBuffer.cpp
Docu/: ParserTabelle.ods  Scanner-Automat.gv
Parser/: makefile  test.txt
Parser/includes/: Node.h  NodeArray.h  NodeBracketExp2.h  NodeDecl.h  NodeDecls.h  NodeEpsilon.h  NodeExp.h  NodeExp2.h  NodeExp2Bracket.h  NodeExp2Exclamation.h  NodeExp2Identifier.h  NodeExp2Integer.h  NodeExp2Minus.h  NodeExp2Parenthesis.h  NodeIdentifier.h  NodeIndex.h  NodeInteger.h  NodeOp.h  NodeOpExp.h  NodeProg.h  NodeStatement.h  NodeStatementAssign.h  NodeStatementBlock.h  NodeStatementIf.h  NodeStatementRead.h  NodeStatementWhile.h  NodeStatementWrite.h  NodeStatements.h  ParseTree.h  Parser.h  Visitor.h  VisitorMakeCode.h  VisitorTypeCheck.h
Parser/includes/Node/: NodeDecls.h  NodeExp.h  NodeExp2Identifier.h  NodeExp2Integer.h  NodeExp2Minus.h  NodeIdentifier.h  NodeIndex.h  NodeInteger.h  NodeProg.h  NodeStatement.h  NodeStatementBlock.h  NodeStatementRead.h  NodeStatementWhile.h  NodeStatementWrite.h  NodeStatements.h
Parser/includes/Nodes/: NodeArray.h  NodeDecl.h  NodeDecls.h  NodeEpsilon.h  NodeExp.h  NodeExp2.h  NodeExp2Bracket.h  NodeExp2Exclamation.h  NodeExp2Identifier.h  NodeExp2Integer.h  NodeExp2Minus.h  NodeExp2Parenthesis.h  NodeIdentifier.h  NodeIndex.h  NodeInteger.h  NodeOp.h  NodeOpExp.h  NodeProg.h  NodeStatement.h  NodeStatementAssign.h  NodeStatementBlock.h  NodeStatementIf.h  NodeStatementRead.h  NodeStatementWhile.h  NodeStatementWrite.h  NodeStatements.h
Parser/src/: Node.cpp  ParseTree.cpp  Parser.cpp  Visitor.cpp  VisitorMakeCode.cpp  VisitorTypeCheck.cpp
Scanner/: makefile
Scanner/debug/: ScannerTest
Scanner/includes/: Scanner.h  Token.h
Scanner/src/: Scanner.cpp  String.cpp  String.h  TestScanner.cpp  Token.cpp
Symboltable/: makefile
Symboltable/debug/: SymboltableTest
Symboltable/includes/: InfoNode.h  Liste.h  StringTabelle.h  Symboltable.h
Symboltable/src/: Liste.cpp  StringTabelle.cpp  Symboltable.cpp  TestSymboltable.cpp
TestFile/: comment.txt  scanner6.txt  test1.txt  test10.txt  test13.txt  test14.txt  test2.txt  test6.txt  test9.txt
TestFile/Parser/: 1000 (1).txt  abc.txt  fib.code  fib.txt  ggt.code  ggt.txt  ownTest  performance.txt  prim.code  prim.txt  sqrt.code  sqrt.txt  test1  test10.code  test10.txt  test11.code  test11.txt
TestFile/Parser/ExtraTests/: 1000.txt  decls.check  decls.test  decls_err_array_size_invalid.check  decls_err_array_size_invalid.test  decls_err_ident_defined.check  (+27 more)
TestFile/Scanner/: test1.txt  test11.txt  test15.txt  test2.txt  test5.txt  test7.txt  test8.txt
Testing/: GenerateToken.go
lib/: String.cpp  String.h  Token.h
